fixed alignments

--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ body {
   background-attachment: scroll;
 }
 
-.main-wrapper {
+/* .main-wrapper {
   height: 100%;
-}
+} */
 
 .hero {
   height: 100%;
@@ -58,7 +58,7 @@ body {
 .video-wrapper {
   height: 100%;
   width: 100%;
-  position: relative;
+  /* position: relative; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,27 +66,28 @@ body {
   overflow: hidden;
 }
 
-.cocnfetti-wrapper {
+.main-wrapper {
   position: relative;
   background: rgba(255, 255, 255, 0);
 }
 
 .confetti {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: auto;
   z-index: 10;
 }
 
 .showtime {
-  position: absolute;
-  margin-top: 30%;
+  /* position: absolute; */
+  margin-top: -50%;
   width: 100%;
+  z-index: -10;
 }
 
 .date {
-  position: absolute;
-  margin-top: 60%;
+  /* position: absolute; */
+  margin-top: -10%;
   width: 100%;
 }
 
@@ -94,45 +95,45 @@ body {
   width: 80%;
   height: auto;
   z-index: 10;
-  margin-top: 135%;
-  position: absolute;
+  margin-top: 0%;
+  /* position: absolute; */
   margin-left: 10%;
   border-radius: 4vw;
 }
 
 .sponsored {
-  position: absolute;
-  margin-top: 190%;
+  /* position: absolute; */
+  margin-top: 0%;
   width: 70%;
   margin-left: 12%;
 }
 
 .sponsors {
-  position: absolute;
+  /* position: absolute; */
   margin-top: 230%;
   width: 70%;
   margin-left: 12%;
 }
 
 .promoplaceholder {
-  position: absolute;
-  margin-top: 131.5%;
+  /* position: absolute; */
+  margin-top: -50%;
   width: 83%;
   height: auto;
   margin-left: 8.5%;
 }
 
 footer {
-  position: absolute;
-  margin-top: 250%;
+  /* position: absolute; */
+  margin-top: 0%;
   background: blur(rgba(255, 255, 255, 0.8));
   width: 100%;
   height: 20%;
 }
 
 .dy {
-  position: absolute;
-  margin-left: 37%;
+  /* position: absolute; */
+  margin-left: 35%;
 }
 
 ul {
@@ -143,7 +144,7 @@ ul {
 }
 
 .dylist li {
-  font-size: 3em;
+  font-size: 3vw;
   color: aliceblue;
 }
 
@@ -193,4 +194,30 @@ ul {
 }
 .dylist li:nth-child(14) {
   color: bisque;
+}
+
+.powered {
+  /* position: absolute; */
+  margin-left: 45%;
+  margin-top: 0%;
+  color: white;
+  font-size: 1.5vw;
+}
+
+.trilok {
+  /* position: absolute; */
+  margin-top: 0%;
+  width: 5%;
+  margin-left: 46%;
+}
+
+.footer-wrapper {
+  height: 20% !important;
+  overflow: hidden;
+}
+.footer-wrapper {
+  /* position: absolute; */
+  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.2));
+  backdrop-filter: blur(5px);
+  padding: 2%;
 }
